log-collector/templates/es-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-service
spec:
  type: NodePort
  ports:
    - port: 9200
      targetPort: 9200
  selector: 
    app: elasticsearch
