log-collector/templates/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: NodePort
  ports:
    - port: 5601
      targetPort: 5601
  selector: 
    app: kibana
